[FIX] web_editor, website: make animated snippets visible in the modal
This commit aims to allow animated snippets to be visible within the
snippets selection modal.

Prior to this commit, the animated content of a snippet was not visible
within the modal. This is due to the fact that the `o_animate` class sets
a `visibility: hidden` by default. As this scenario is corner case and
none of the snippets were using animation, we did not really have the
need of introducing such CSS.

This commit simply add a CSS property to ensure the content of these
snippets will be visible within the modal.

task-4204911

closes odoo/odoo#181087

--- a/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg_snippets.scss
@@ -2976,6 +2976,11 @@ we-select.o_grid we-toggler {
                     max-width: 100%;
                 }
             }
+
+            .o_animate {
+                visibility: visible;
+                animation-name: none;
+            }
         }
         .o_custom_snippet_wrap {
             margin-bottom: 96px !important;
